# TacThru

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  index.html  pyproject.toml  train_tf.sh
cfg/: config.yaml
cfg/camera/: gopro9.yaml
cfg/gopro/: gopro_intr_cvt.py  gopro_intrinsics_2_7k.json  gopro_intrinsics_720p.json
cfg/sensor/: none.yaml  tacthru.yaml
cfg/train/: train_tf.yaml
cfg/train/task/: _template.yaml  hang_scissors.yaml  insert_cap.yaml  pick_bottle.yaml  pull_tissue.yaml  sort_bolt.yaml
data/gripper/: width_mapping.json
data/tacthru/: ref_kpts.npy
diffusion_policy/codecs/: imagecodecs_numcodecs.py
diffusion_policy/common/: checkpoint_util.py  cv2_util.py  cv_util.py  env_util.py  json_logger.py  normalize_util.py  pose_repr_util.py  pose_util.py  replay_buffer.py  sampler.py  timestamp_accumulator.py
diffusion_policy/dataset/: base_dataset.py  umi_dataset.py
diffusion_policy/env_runner/: base_lowdim_runner.py
diffusion_policy/model/common/: lr_scheduler.py  normalizer.py  rotation_transformer.py  tensor_util.py
diffusion_policy/policy/: base_image_policy.py  base_lowdim_policy.py  diffusion_transformer_timm_policy.py  diffusion_unet_timm_policy.py
diffusion_policy/shared_memory/: shared_memory_queue.py  shared_memory_ring_buffer.py  shared_memory_util.py  shared_ndarray.py
diffusion_policy/workspace/: base_workspace.py  plot_utils.py  train_diffusion_workspace.py  val_utils.py
scripts/: marker_test.py  show_ds.py  train.py
utils/: cylinder_comm.py  math_utils.py  proc_utils.py  shared.py
(+8 files in other folders)
